@@ -1,4 +1,5 @@
 # All model items...
+
 from actor import *
 from comment import *
 from commentline import *
@@ -11,7 +12,7 @@ from diagramitemfactory import *
 
 #  Register diagram items with the diagram item factory
 
-import UML
+import gaphor.UML as UML
 
 f = DiagramItemFactory()
 f.register (ActorItem, UML.Actor)
