@@ -4,6 +4,8 @@
 #
 
 import sys
+sys.path.insert(0, '..')
+
 import gtk
 import diagram
 import diacanvas
